# superpy

./: .gitignore  Cube.py  Debug.py  Likelihood.py  MNOptions.py  Makefile  Priors.py  README.md  SuperPy.py  Tester.py  fastlim_superpy.py
FeynHiggs-2.10.0/: README  configure  makefile  makefile.in
FeynHiggs-2.10.0/example/: SuperPy.F  demo.F  demo.cc  demo.m  makeslha  var.in
FeynHiggs-2.10.0/man/: api.tex
FeynHiggs-2.10.0/src/: makefile
FeynHiggs-2.10.0/web/: chk  fhman.cgi  fhucc.cgi  fhucc.cgi-old  unescape.c
HiggsBounds-4.1.0/: AllAnalyses  HiggsBounds  HiggsBounds.F90  PDGnumbering.f90  README  S95tables_type1.F90  S95tables_type2.F90  S95tables_type3.F90  SLHA_manip.f90  channels.F90  channels.mod  configure-with-chisq  create_store_pathname.bat  extra_bits_for_slha.mod  extra_bits_for_web.mod  extract_SM_results_for_web.f90  input.F90  input.mod  interpolate.f90  interpolate.mod  makefile  makefile.in  minipaper.tex  output.F90  output.mod  pdgnumbering.mod  s95tables.mod  s95tables_type1.mod  s95tables_type2.mod  s95tables_type3.mod  slha_manip.mod  store_pathname.f90  store_pathname.mod  string_manip.f90  string_manip.mod  theo_manip.f90  theo_manip.mod  theory_BRfunctions.F90  theory_XS_SM_functions.F90  theory_brfunctions.mod  (+5 more)
HiggsBounds-4.1.0/Theory_tables/: BRSM.binary
HiggsBounds-4.1.0/cs-ratios_sigma-bg-Hb/: LHC7TeV.R_HVBF_WW.h  LHC7TeV.R_HVBF_ZZ.h  LHC7TeV.R_HWm_dub.h  LHC7TeV.R_HWm_scb.h  LHC7TeV.R_HWp_csb.h  LHC7TeV.R_HWp_udb.h  LHC7TeV.R_HZ_bbb.h  LHC7TeV.R_HZ_ddb.h  LHC7TeV.R_HZ_ssb.h  LHC7TeV.R_H_bb.h  LHC8TeV.R_HWm_scb.h  LHC8TeV.R_HWp_csb.h  LHC8TeV.R_HWp_udb.h  LHC8TeV.R_HZ_gg.h  LHC8TeV.R_HZ_ssb.h  LHC8TeV.R_H_gg.h  Tevatron.R_HWp_udb.h  Tevatron.R_HZ_ssb.h  Tevatron.R_HZ_uub.h  (+1 more)
HiggsSignals-1.2.0/: HiggsSignals  HiggsSignals.F90  HiggsSignals_subroutines.F90  README  all_chisq.mod  combinatorics.f90  combinatorics.mod  configure  create_store_pathname_HS.bat  datatables.f90  datatables.mod  expt_syst.f90  expt_syst.mod  io.mod  makefile  makefile.in  mc_chisq.f90  mc_chisq.mod  numerics.f90  numerics.mod  pc_chisq.mod  run_tests.bat  store_pathname_HS.f90  store_pathname_hs.mod  usefulbits_HS.f90  usefulbits_hs.mod
MSSM/: Likelihood.py  LineProcess.py  Minuit.py  Priors.py  fastlim.out  fastlim_superpy.py
MultiNest-master/: .gitignore  CMakeLists.txt  README
NMSSM/: Cube.py  Likelihood.py  LineProcess.py  MNOptions.py  Minuit.py  PostProcess.py  Priors.py  Tester.py  fastlim.out  fastlim_superpy.py
NMSSMTools_4.2.1/: Makefile  README  run
SuperPlot/: Appearance.py  Masses.py  OneDim.py  OneDimPlot.py  PlotMod.py  Pull.py  SLHADictionary.py  Stats.py  Summary.py  SuperGUI.py  TwoDim.py  TwoDimPlot.py
example/: SB_MO_log_all.info
fastlim-1.0/: ScanPoints.py  basic_func.py  display.py  extract_chain.py  fastlim.out  fastlim.py  finalstate.py  pyslha.py  read_data.py  update.py
micromegas_3.6.9.2/: .date  Makefile  README  clean  newProject
pyslha-2.1.3/: ChangeLog  PKG-INFO  isawig2slha  setup.py  slha2isawig  slhaplot
softsusy-3.4.0/: CHANGES  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libtool  rpvneut.x  rpvsoftsusy.x  setup_nmssmtools.sh  softpoint.x  softsusy-nmssm.x  softsusy.x  softsusy_nmssmtools.x.in
softsusy-3.4.0/.libs/: lt-rpvneut.x  lt-softpoint.x  rpvneut.x  rpvsoftsusy.x  softpoint.x  softsusy-nmssm.x  softsusy.x
softsusy-3.4.0/Config/: config.h  config.h.in  stamp-h1
softsusy-3.4.0/benchmarks/: cmssm10.1.1.in  cmssm10.1.1.spec  cmssm10.1.2.in  cmssm10.1.2.spec  cmssm10.1.3.in  cmssm10.1.3.spec  cmssm10.1.4.in  cmssm10.1.4.spec  cmssm10.1.5.in  cmssm10.1.5.spec  cmssm10.2.1.in  cmssm10.2.1.spec  cmssm10.2.2.in  cmssm10.2.2.spec  cmssm10.2.3.in  cmssm10.2.3.spec  cmssm10.2.4.in  cmssm10.2.4.spec  cmssm10.2.5.in  cmssm10.2.5.spec  cmssm10.3.1.in  cmssm10.3.1.spec  cmssm10.3.2.in  cmssm10.3.2.spec  cmssm10.3.3.in  cmssm10.3.3.spec  cmssm10.3.4.in  cmssm10.3.4.spec  cmssm10.3.5.in  cmssm10.3.5.spec  cmssm10.4.1.in  cmssm10.4.1.spec  cmssm10.4.2.in  cmssm10.4.2.spec  cmssm10.4.3.in  cmssm10.4.3.spec  cmssm10.4.4.in  cmssm10.4.4.spec  cmssm10.4.5.in  cmssm10.4.5.spec  (+126 more)
softsusy-3.4.0/doc/: Makefile  Makefile.am  Makefile.in  nmssmManual.aux  nmssmManual.dvi  nmssmManual.ps  nmssmManual.tex  rpcManual.tex  rpvManual.aux  rpvManual.dvi  rpvManual.ps  rpvManual.tex
softsusy-3.4.0/inOutFiles/: lesHouchesOutput  neutOutputTest  nmssmSLHAZ3Input  nmssmSLHAZ3Output  nmssmSLHAnoZ3Input  nmssmSLHAnoZ3Output  rpvHouchesOutput  slha2Output
softsusy-3.4.0/src/: Makefile  Makefile.am  Makefile.in  def.cpp  def.h  def.lo  dilogwrap.lo  flavoursoft.cpp  flavoursoft.lo  libsoft.la  linalg.cpp  linalg.h  linalg.lo  lowe.cpp  lowe.h  lowe.lo  main-nmssm.cpp  main.cpp  main.h  mssmUtils.cpp  mssmUtils.h  mssmUtils.lo  nmProcessSpec.f  nmssm2loop.lo  nmssmUtils.cpp  nmssmUtils.h  nmssmUtils.lo  nmssmsoftpars.cpp  nmssmsoftpars.lo  nmssmsoftsusy.cpp  nmssmsoftsusy.h  nmssmsoftsusy.lo  nmssmsusy.h  nmssmsusy.lo  numerics.cpp  numerics.h  numerics.lo  physpars.cpp  physpars.lo  rge.lo  (+21 more)
softsusy-3.4.0/src/.deps/: def.Plo  flavoursoft.Plo  linalg.Plo  lowe.Plo  main-nmssm.Po  main.Po  mssmUtils.Plo  nmssmUtils.Plo  nmssmsoftpars.Plo  nmssmsoftsusy.Plo  nmssmsusy.Plo  numerics.Plo  physpars.Plo  rge.Plo  rpvmain.Po  rpvneut.Plo  rpvneutmain.Po  rpvsoft.Plo  rpvsusypars.Plo  softpoint.Po  susy.Plo  tensor.Plo  utils.Plo
softsusy-3.4.0/src/.libs/: libsoft.lai  libsoft.so.0.0.0
softsusy-3.5.2/: CHANGES  INSTALL  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libsoft.la  libtool  rpvneut.x  rpvsoftsusy.x  softpoint.x  softsusy-nmssm.x  softsusy.x
superiso_v3.3/: Makefile  README  amsb.c  cmssm.c  cnmssm.c  gmsb.c  hcamsb.c  mmamsb.c  ngmsb.c  nnuhm.c  nuhm.c  output.flha  slha.c  slha.x  sm.c  thdm.c
susy_flavor_2.50/: Makefile  sfile  susy_flavor.in  susy_flavor.out  susy_flavor_file.f  susy_flavor_prog.f
susyhit/: bsg.f  hdecay.f  hgaga.f  makefile  sdecay.f  slhaspectrum.in  suspect2.f  suspect2_lha.in  susyhit.in  susyhit_slha.out
(+2769 files in other folders)
