SUBDIRS = src doc

ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

OUTPUTFILES = inOutFiles/slha2Output inOutFiles/lesHouchesOutput inOutFiles/rpvHouchesOutput \
 inOutFiles/nmssmSLHAZ3Output inOutFiles/nmssmSLHAnoZ3Output inOutFiles/neutOutputTest \
benchmarks/cmssm10.1.1.spec benchmarks/cmssm10.1.2.spec \
benchmarks/cmssm10.1.3.spec benchmarks/cmssm10.1.4.spec \
benchmarks/cmssm10.1.5.spec \
benchmarks/cmssm10.2.1.spec benchmarks/cmssm10.2.2.spec \
benchmarks/cmssm10.2.3.spec benchmarks/cmssm10.2.4.spec \
benchmarks/cmssm10.2.5.spec \
benchmarks/cmssm10.3.1.spec benchmarks/cmssm10.3.2.spec \
benchmarks/cmssm10.3.3.spec benchmarks/cmssm10.3.4.spec \
benchmarks/cmssm10.3.5.spec \
benchmarks/cmssm10.4.1.spec benchmarks/cmssm10.4.2.spec \
benchmarks/cmssm10.4.3.spec benchmarks/cmssm10.4.4.spec \
benchmarks/cmssm10.4.5.spec \
benchmarks/cmssm40.1.1.spec benchmarks/cmssm40.1.2.spec \
benchmarks/cmssm40.1.3.spec benchmarks/cmssm40.1.4.spec \
benchmarks/cmssm40.1.5.spec \
benchmarks/cmssm40.2.1.spec benchmarks/cmssm40.2.2.spec \
benchmarks/cmssm40.2.3.spec benchmarks/cmssm40.2.4.spec \
benchmarks/cmssm40.2.5.spec \
benchmarks/cmssm40.3.1.spec benchmarks/cmssm40.3.2.spec \
benchmarks/cmssm40.3.3.spec benchmarks/cmssm40.3.4.spec \
benchmarks/cmssm40.3.5.spec \
benchmarks/mamsb1.1.spec benchmarks/mamsb1.2.spec benchmarks/mamsb1.3.spec \
benchmarks/mgmsb1.1.spec benchmarks/mgmsb1.2.spec benchmarks/mgmsb1.3.spec \
benchmarks/mgmsb1.4.spec benchmarks/mgmsb1.5.spec benchmarks/mgmsb1.6.spec \
benchmarks/mgmsb2.1.1.spec benchmarks/mgmsb2.1.2.spec benchmarks/mgmsb2.1.3.spec \
benchmarks/mgmsb2.1.4.spec benchmarks/mgmsb2.1.5.spec benchmarks/mgmsb2.1.6.spec \
benchmarks/mgmsb2.2.1.spec benchmarks/mgmsb2.2.2.spec benchmarks/mgmsb2.2.3.spec \
benchmarks/mgmsb2.2.4.spec benchmarks/mgmsb2.2.5.spec benchmarks/mgmsb2.2.6.spec \
benchmarks/pmssm1.1.spec benchmarks/pmssm1.2.spec benchmarks/pmssm1.3.spec \
benchmarks/pmssm1.4.spec benchmarks/pmssm1.5.spec benchmarks/pmssm1.6.spec \
benchmarks/pmssm2.1.spec benchmarks/pmssm2.2.spec benchmarks/pmssm2.3.spec \
benchmarks/pmssm2.4.spec benchmarks/pmssm2.5.spec benchmarks/pmssm2.6.spec \
benchmarks/rpv1.1.spec benchmarks/rpv1.2.spec benchmarks/rpv1.3.spec \
benchmarks/rpv1.4.spec benchmarks/rpv1.5.spec \
benchmarks/rpv2.1.spec benchmarks/rpv2.2.spec benchmarks/rpv2.3.spec \
benchmarks/rpv2.4.spec benchmarks/rpv2.5.spec \
benchmarks/rpv3.1.spec benchmarks/rpv3.2.spec benchmarks/rpv3.3.spec \
benchmarks/rpv3.4.spec benchmarks/rpv3.5.spec 

INPUTFILES = inOutFiles/slha2Input inOutFiles/lesHouchesInput inOutFiles/rpvHouchesInput \
inOutFiles/nmssmSLHAZ3Input inOutFiles/nmssmSLHAnoZ3Input \
benchmarks/cmssm10.1.1.in benchmarks/cmssm10.1.2.in \
benchmarks/cmssm10.1.3.in benchmarks/cmssm10.1.4.in \
benchmarks/cmssm10.1.5.in \
benchmarks/cmssm10.2.1.in benchmarks/cmssm10.2.2.in \
benchmarks/cmssm10.2.3.in benchmarks/cmssm10.2.4.in \
benchmarks/cmssm10.2.5.in \
benchmarks/cmssm10.3.1.in benchmarks/cmssm10.3.2.in \
benchmarks/cmssm10.3.3.in benchmarks/cmssm10.3.4.in \
benchmarks/cmssm10.3.5.in \
benchmarks/cmssm10.4.1.in benchmarks/cmssm10.4.2.in \
benchmarks/cmssm10.4.3.in benchmarks/cmssm10.4.4.in \
benchmarks/cmssm10.4.5.in \
benchmarks/cmssm40.1.1.in benchmarks/cmssm40.1.2.in \
benchmarks/cmssm40.1.3.in benchmarks/cmssm40.1.4.in \
benchmarks/cmssm40.1.5.in \
benchmarks/cmssm40.2.1.in benchmarks/cmssm40.2.2.in \
benchmarks/cmssm40.2.3.in benchmarks/cmssm40.2.4.in \
benchmarks/cmssm40.2.5.in \
benchmarks/cmssm40.3.1.in benchmarks/cmssm40.3.2.in \
benchmarks/cmssm40.3.3.in benchmarks/cmssm40.3.4.in \
benchmarks/cmssm40.3.5.in \
benchmarks/mamsb1.1.in benchmarks/mamsb1.2.in benchmarks/mamsb1.3.in \
benchmarks/mgmsb1.1.in benchmarks/mgmsb1.2.in benchmarks/mgmsb1.3.in \
benchmarks/mgmsb1.4.in benchmarks/mgmsb1.5.in benchmarks/mgmsb1.6.in \
benchmarks/mgmsb2.1.1.in benchmarks/mgmsb2.1.2.in benchmarks/mgmsb2.1.3.in \
benchmarks/mgmsb2.1.4.in benchmarks/mgmsb2.1.5.in benchmarks/mgmsb2.1.6.in \
benchmarks/mgmsb2.2.1.in benchmarks/mgmsb2.2.2.in benchmarks/mgmsb2.2.3.in \
benchmarks/mgmsb2.2.4.in benchmarks/mgmsb2.2.5.in benchmarks/mgmsb2.2.6.in \
benchmarks/pmssm1.1.in benchmarks/pmssm1.2.in benchmarks/pmssm1.3.in \
benchmarks/pmssm1.4.in benchmarks/pmssm1.5.in benchmarks/pmssm1.6.in \
benchmarks/pmssm2.1.in benchmarks/pmssm2.2.in benchmarks/pmssm2.3.in \
benchmarks/pmssm2.4.in benchmarks/pmssm2.5.in benchmarks/pmssm2.6.in \
benchmarks/rpv1.1.in benchmarks/rpv1.2.in benchmarks/rpv1.3.in \
benchmarks/rpv1.4.in benchmarks/rpv1.5.in \
benchmarks/rpv2.1.in benchmarks/rpv2.2.in benchmarks/rpv2.3.in \
benchmarks/rpv2.4.in benchmarks/rpv2.5.in \
benchmarks/rpv3.1.in benchmarks/rpv3.2.in benchmarks/rpv3.3.in \
benchmarks/rpv3.4.in benchmarks/rpv3.5.in 

dist_pkgdata_DATA = softsusy_nmssmtools.x.in setup_nmssmtools.sh Makefile.nmssmtools $(INPUTFILES) $(OUTPUTFILES) CHANGES GUIDELINES COPYING $(DOCFILES)
CLEANFILES=$(OUTPUTFILES) *.x

inOutFiles/%Output : inOutFiles/%Input softpoint.x 
	./softpoint.x leshouches < $< > $@

inOutFiles/outputTest: softsusy.x
	./softsusy.x > inOutFiles/outputTest

inOutFiles/rpvOutputTest: rpvsoftsusy.x
	./rpvsoftsusy.x > inOutFiles/rpvOutputTest

inOutFiles/neutOutputTest: rpvneut.x
	./rpvneut.x > inOutFiles/neutOutputTest

benchmarks/%.spec: benchmarks/%.in softpoint.x
	$(install_sh) -d benchmarks
	./softpoint.x leshouches < $< > $@

.PHONY: doc test updateWeb

test: softpoint.x
	git checkout $(OUTPUTFILES)
	cp $(OUTPUTFILES) .test; rm $(OUTPUTFILES); make $(OUTPUTFILES); \
	ndiff --relative-error 1.0e-3 inOutFiles/slha2Output .test/slha2Output; \
	ndiff --relative-error 1.0e-3 inOutFiles/lesHouchesOutput .test/lesHouchesOutput; \
	ndiff --relative-error 1.0e-3 inOutFiles/rpvHouchesOutput .test/rpvHouchesOutput; \
	ndiff --relative-error 1.0e-3 inOutFiles/nmssmSLHAZ3Output .test/nmssmSLHAZ3Output; \
	ndiff --relative-error 1.0e-3 inOutFiles/nmssmSLHAnoZ3Output .test/nmssmSLHAnoZ3Output

doc:
	@echo Making $@ in $(top_builddir)/doc
	cd $(top_builddir)/doc && make $@

updateWeb: dist 
	scp softsusy-${VERSION}.tar.gz allanach@login.hepforge.org:~/softsusy/downloads; 
	scp inOutFiles/*{Input,Output}* allanach@login.hepforge.org:~/softsusy/public_html/code
	scp {src/def.h,inOutFiles/outputTest,README} allanach@login.hepforge.org:~/softsusy/public_html/code
	scp Makefile.alt allanach@login.hepforge.org:~/softsusy/public_html/Makefile
	scp -r doc allanach@login.hepforge.org:~/softsusy/public_html/; \
	doxygen softsusy.cfg &&\
	scp -r html allanach@login.hepforge.org:~/softsusy/public_html; \
	scp -r CHANGES allanach@login.hepforge.org:~/softsusy/public_html/CHANGES.${VERSION}.html; \
	rm -fr html *.tar.gz
